add toolbar & pickaxe model
Signed-off-by: OSfrog <tommy_8786@hotmail.com>

--- a/index.html
+++ b/index.html
@@ -9,6 +9,71 @@
   </head>
   <body>
     <div id="app"></div>
+    <div id="toolbar-container">
+      <div id="toolbar">
+        <img
+          class="toolbar-icon"
+          id="toolbar-1"
+          src="/textures/grass.png"
+          alt="Grass"
+        />
+        <img
+          class="toolbar-icon"
+          id="toolbar-2"
+          src="/textures/dirt.png"
+          alt="Dirt"
+        />
+        <img
+          class="toolbar-icon"
+          id="toolbar-3"
+          src="/textures/stone.png"
+          alt="Stone"
+        />
+        <img
+          class="toolbar-icon"
+          id="toolbar-4"
+          src="/textures/coal_ore.png"
+          alt="Coal Ore"
+        />
+        <img
+          class="toolbar-icon"
+          id="toolbar-5"
+          src="/textures/iron_ore.png"
+          alt="Iron Ore"
+        />
+        <img
+          class="toolbar-icon"
+          id="toolbar-6"
+          src="/textures/tree_top.png"
+          alt="Tree Top"
+        />
+        <img
+          class="toolbar-icon"
+          id="toolbar-7"
+          src="/textures/leaves.png"
+          alt="Leaves"
+        />
+        <img
+          class="toolbar-icon"
+          id="toolbar-8"
+          src="/textures/sand.png"
+          alt="Sand"
+        />
+        <img
+          class="toolbar-icon"
+          id="toolbar-9"
+          src="/textures/diamond_sword.png"
+          alt="Diamond Sword"
+        />
+
+        <img
+          class="toolbar-icon selected"
+          id="toolbar-0"
+          src="/textures/diamond_pickaxe.png"
+          alt="Diamond Pickaxe"
+        />
+      </div>
+    </div>
     <div id="info">
       <div id="player-position"></div>
     </div>
