--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <div id="info">
       <div id="player-position"></div>
     </div>
+    <div id="status"></div>
     <script type="module" src="/scripts/main.js"></script>
   </body>
 </html>
